# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orflib"
version = "0.10.0"
description = "orflib quant library"
maintainers = [{name = "Michael G Sotiropoulos", email = "msotirop@princeton.edu"}]
dependencies = ["numpy"]
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
orflib = ["*.pyd", "*.so"]
